# MeteoMan

./: README.md
Hardware/Docs/: CWT-TH01S.md  HardwareNotes.md
Hardware/PicoWeather/: .gitignore  PicoWeather.kicad_pcb  PicoWeather.kicad_pro  PicoWeather.kicad_sch  PicoWeather.step
Hardware/PicoWeather/lib/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
Hardware/PicoWeather/output/weather-shield-gerbers/: PicoWeather-B_Cu.gbl  PicoWeather-B_Mask.gbs  PicoWeather-B_Paste.gbp  PicoWeather-B_Silkscreen.gbo  PicoWeather-Edge_Cuts.gm1  PicoWeather-F_Cu.gtl  PicoWeather-F_Mask.gts  PicoWeather-F_Paste.gtp  PicoWeather-F_Silkscreen.gto  PicoWeather-NPTH-drl_map.gbr  PicoWeather-NPTH.drl  PicoWeather-PTH-drl_map.gbr  PicoWeather-PTH.drl
Server/: FakeData.py  README.md  docker-compose.yml
Server/app/: db.php  endpoints.php  index.php  meteo_graph.js  meteo_page.html  meteo_style.css
Server/app/api/: db.php  endpoints.php
Station/: .gitignore  CMakeLists.txt  CMakePresets.json  Notes.md  README.md  raspberry_clang.cmake
Station/config/: config.ini  meteoman_conf.ini
Station/package/: postinst  test.service
Station/sources/: CMakeLists.txt  bucket.cpp  bucket.h  cwt_modbus.cpp  cwt_modbus.h  http_comm.cpp  http_comm.h  logic.cpp  logic.h  meteoman.cpp  meteoman.h  ring_buffer.h  tick.cpp  tick.h  timer.cpp  timer.h  traffic_light.cpp  traffic_light.h
